# APP

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
backend/: main.py  requirements.txt  test_session.py
src/: App.tsx  index.html  index.tsx  metadata.json  tailwind.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs  mod.rs
src/components/: GeminiPlayground.tsx  Homepage.tsx  IconComponents.tsx  LogViewer.tsx  ProfileManager.tsx  ProfileManager.tsx_old  PromptInput.tsx  SettingsPage.tsx  Toast.tsx  VeoAutomator.tsx  VideoGrid.tsx
src/contexts/: AppContext.tsx
src/hooks/: useLocalStorage.ts
src/modules/gemini/: GeminiPlayground.tsx  types.ts
src/modules/gemini/components/: LogViewer.tsx
src/modules/gemini/services/: geminiPlaygroundService.ts
src/modules/veo/: VeoAutomator.tsx  types.ts
src/modules/veo/components/: LogViewer.tsx  ProfileManager.tsx  PromptInput.tsx  VideoGrid.tsx
src/modules/veo/services/: veoService.ts
src/services/: geminiService.ts
src/utils/: fileUtils.ts
